# agrisafe-backend

./: .gitignore  __init__.py  agricultural_risk_calculator.py  app.py  build.sh  config.py  debug_prediction.py  image_classifier.py  models.py  pyproject.toml  requirements.txt  risk_predictor.py  safety_score_calculator.py
models/: classifier_5class.pkl  food_classifier.pkl  risk_predictor.pkl  shelf_life_predictor.pkl
